# offline-cnc-rag-assistant

./: LICENSE  README.md  pyproject.toml
configs/: sources.json
docs/: project_plan.md
eval/: questions.json
scripts/: download_sources.sh
src/: _init_.py  cli.py  config.py  evaluation.py
src/generation/: _init_.py  ollama.py
src/ingestion/: _init_.py  pdf.py
src/retrieval/: _init_.py  index.py
src/ui/: _init_.py  app.py
tests/: test_chucking.py  test_evaluation.py  test_generation.py  test_retrieval_scoring.py
